Drop code that prevented overriding the existing renderer type: it doesn't make sense now
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@325209 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -69,6 +69,8 @@ Bug fixes
   * Hierselect's value is properly updated when its name changes
   * Unit tests use autoloader instead of explicit 'require_once', all tests now
     can be run separately
+  * HTML_QuickForm2_Renderer::register() allows overriding an existing renderer
+    type, similar to elements and rules
  </notes>
  <contents>
   <dir name="/">
