--- a/package.xml
+++ b/package.xml
@@ -41,10 +41,10 @@
   <email>golgote@mamasam.com</email>
   <active>yes</active>
  </lead>
- <date>2012-06-26</date>
+ <date>2014-06-26</date>
  <version>
-  <release>2.0.0</release>
-  <api>2.0.0</api>
+  <release>2.0.1</release>
+  <api>2.0.1</api>
  </version>
  <stability>
   <release>stable</release>
@@ -52,11 +52,28 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
- * Leftover 'foo' no longer stays in grouped element's name when renaming group
-   named 'foo[foo]' (bug #19477)
- * 'classes' property of qf.Validator moved to its prototype, making it easier
-   to override
- * Items marked deprecated previously are removed
+Bug fixes
+ * HTML_QuickForm2_DataSource_Array and its descendants now differentiate
+   between "no value available for an element" and "explicit null value
+   available for an element" (see bug #20295). Custom DataSources may implement
+   HTML_QuickForm2_DataSource_NullAware interface to achieve the same.
+ * Contents of Static elements added to Repeat are no longer cleared (bug #19802)
+ * Client-side rules for containers within Repeat are correctly removed when
+   removing a repeated item (bug #19803)
+ * Client-side validator is always generated for a form with a Repeat having
+   some client-side rules on its child elements, even if Repeat is empty
+ * Unit tests updated to work with newer phpunit, prevent running tests twice
+   under some circumstances (see bug #19038)
+
+Other features and changes
+ * Calling HTML_QuickForm2_Container_Group::setValue() will clear values of
+   those grouped elements that do not have a corresponding key in the passed
+   array. Passing a null or an empty array to setValue() will clear the values
+   of all grouped elements. Previous behaviour was counter-intuitive.
+ * Added HTML_QuickForm2_Element_Select::getOptionContainer() (request #19955)
+ * HTML_QuickForm2_Container_Group::setValue() properly handles a group of radio
+   elements (request #20103)
+ * HTML_QuickForm2_Element_Date::setValue() can accept an instance of DateTime
  </notes>
  <contents>
   <dir name="/">
@@ -109,6 +126,9 @@
      </dir> <!-- /HTML/QuickForm2/Controller -->
      <dir name="DataSource">
       <file name="Array.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="NullAware.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
       <file name="Session.php" role="php">
@@ -694,6 +714,25 @@
   </filelist>
  </phprelease>
  <changelog>
+  <release>
+   <date>2012-06-26</date>
+   <version>
+    <release>2.0.0</release>
+    <api>2.0.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
+   <notes>
+  * Leftover 'foo' no longer stays in grouped element's name when renaming group
+    named 'foo[foo]' (bug #19477)
+  * 'classes' property of qf.Validator moved to its prototype, making it easier
+    to override
+  * Items marked deprecated previously are removed
+   </notes>
+  </release>
   <release>
    <date>2012-05-22</date>
    <version>
