--- a/package.xml
+++ b/package.xml
@@ -41,9 +41,9 @@
   <email>golgote@mamasam.com</email>
   <active>yes</active>
  </lead>
- <date>2014-06-26</date>
+ <date>2014-06-28</date>
  <version>
-  <release>2.0.1</release>
+  <release>2.0.2</release>
   <api>2.0.1</api>
  </version>
  <stability>
@@ -52,31 +52,8 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
-Bug fixes
- * When using HTML_QuickForm2_DataSource_Array and its descendants elements'
-   updateValue() implementations now differentiate between "no value available
-   for an element" and "explicit null value provided for an element"
-   (see bug #20295). Custom DataSources may implement the new
-   HTML_QuickForm2_DataSource_NullAware interface to achieve the same.
- * Contents of Static elements added to Repeat are no longer cleared (bug #19802)
- * Client-side rules for containers within Repeat are correctly removed when
-   removing a repeated item (bug #19803)
- * Client-side validator is always generated for a form with a Repeat having
-   some client-side rules on its child elements, even if Repeat is empty
- * Unit tests updated to work with newer PHPUnit, prevent running tests twice
-   under some circumstances (see bug #19038)
-
-Other features and changes
- * Calling HTML_QuickForm2_Container_Group::setValue() will clear values of
-   those grouped elements that do not have a corresponding key in the passed
-   array. Passing a null or an empty array to setValue() will clear the values
-   of all grouped elements. Previous behaviour was counter-intuitive.
- * Added HTML_QuickForm2_Element_Select::getOptionContainer() (request #19955)
- * HTML_QuickForm2_Container_Group::setValue() properly handles a group of radio
-   elements (request #20103)
- * HTML_QuickForm2_Element_Date::setValue() can accept an instance of DateTime
- * Extracted removeErrorMessage() from removeRelatedErrors() of qf.Validator
-   for easier customizing of client-side errors output
+Bug #20295 was incorrectly fixed for Static elements, this led to removing
+their contents when DataSources did not contain values for them.
  </notes>
  <contents>
   <dir name="/">
@@ -717,6 +694,45 @@ Other features and changes
   </filelist>
  </phprelease>
  <changelog>
+  <release>
+   <date>2014-06-26</date>
+   <version>
+    <release>2.0.1</release>
+    <api>2.0.1</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
+   <notes>
+Bug fixes
+ * When using HTML_QuickForm2_DataSource_Array and its descendants elements'
+   updateValue() implementations now differentiate between "no value available
+   for an element" and "explicit null value provided for an element"
+   (see bug #20295). Custom DataSources may implement the new
+   HTML_QuickForm2_DataSource_NullAware interface to achieve the same.
+ * Contents of Static elements added to Repeat are no longer cleared (bug #19802)
+ * Client-side rules for containers within Repeat are correctly removed when
+   removing a repeated item (bug #19803)
+ * Client-side validator is always generated for a form with a Repeat having
+   some client-side rules on its child elements, even if Repeat is empty
+ * Unit tests updated to work with newer PHPUnit, prevent running tests twice
+   under some circumstances (see bug #19038)
+
+Other features and changes
+ * Calling HTML_QuickForm2_Container_Group::setValue() will clear values of
+   those grouped elements that do not have a corresponding key in the passed
+   array. Passing a null or an empty array to setValue() will clear the values
+   of all grouped elements. Previous behaviour was counter-intuitive.
+ * Added HTML_QuickForm2_Element_Select::getOptionContainer() (request #19955)
+ * HTML_QuickForm2_Container_Group::setValue() properly handles a group of radio
+   elements (request #20103)
+ * HTML_QuickForm2_Element_Date::setValue() can accept an instance of DateTime
+ * Extracted removeErrorMessage() from removeRelatedErrors() of qf.Validator
+   for easier customizing of client-side errors output
+   </notes>
+  </release>
   <release>
    <date>2012-06-26</date>
    <version>
