--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,25 @@
 language: php
-php:
-  - 5.2
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - 7.1
-  - 7.2
-  - 7.3
+
+matrix:
+  fast_finish: true
+  include:
+    - php: "5.2"
+      dist: precise
+    - php: "5.3"
+      dist: precise
+    - php: "5.4"
+    - php: "5.5"
+    - php: "5.6"
+    - php: "7.0"
+    - php: "7.1"
+    - php: "7.2"
+    - php: "nightly"
+    - php: "master"
+    - php: "hhvm"
+  allow_failures:
+    - php: "nightly"
+    - php: "master"
+    - php: "hhvm"
+    
 install: pear install HTML_Common2
 script: phpunit tests
