--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,22 @@
 language: php
-php:
-  - 5.2
-  - 5.3
-  - 5.4
-  - 5.5
-install: pear install HTML_Common2
+dist: trusty
+sudo: false
+
+matrix:
+  include:
+    - php: "5.2"
+      dist: precise
+      env: SKIPCOMPOSER=true
+    - php: "5.3"
+      dist: precise
+    - php: "5.4"
+    - php: "5.5"
+    - php: "5.6"
+    - php: "7.0"
+    - php: "7.1"
+    - php: "7.2"
+
+install:
+  - pear install HTML_Common2
+  - if [[ $SKIPCOMPOSER != true ]]; then composer install; fi
 script: phpunit tests
