--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
   include:
     - php: "5.2"
       dist: precise
-      env: SKIPCOMPOSER=true
+      env: PHP52SUCKS=true
     - php: "5.3"
       dist: precise
     - php: "5.4"
@@ -15,11 +15,22 @@ matrix:
     - php: "7.0"
     - php: "7.1"
     - php: "7.2"
+    - php: "7.3"
 
 install:
-  - pear channel-update pear.php.net
-  - pear install HTML_Common2
-  - if [[ $SKIPCOMPOSER != true ]]; then composer install; fi
+  - |
+    if [[ $PHP52SUCKS == true ]]; then
+      wget http://download.pear.php.net/package/HTML_Common2-2.1.1.tgz
+      pear install ./HTML_Common2-2.1.1.tgz
+    else
+      pear channel-update pear.php.net
+      pear install HTML_Common2
+      composer install
+    fi
 script:
-  - if [[ $SKIPCOMPOSER == true ]]; then phpunit tests; fi
-  - if [[ $SKIPCOMPOSER != true ]]; then ./vendor/bin/phpunit tests; fi
+  - |
+    if [[ $PHP52SUCKS == true]]; then
+      phpunit tests
+    else
+      ./vendor/bin/phpunit tests
+    fi
