--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,10 @@ install:
 script:
   - which phpunit
   - phpunit --version
-  - phpunit ./tests
+  # Do not test composer installation on PHP 5.2 due to lack of composer
+  - if [[ $PHP52SUCKS != true]]; then phpunit ./tests; fi
+  - pear package-validate ./package.xml
+  - php ./pear-package-helper.php
+  - pear install ./.pear-package/package.xml
+  # Run tests on HTML_QuickForm2 installed with pear
+  - phpunit `pear config-get test_dir`/HTML_QuickForm2
